frontend/assets/stylesheets/base/_forms.scss
/* Base form styles
   ========================================================================== */

@if $old-ie {
    // IE 8 won't display webfonts in password fields…
    [type=password] {
        font-family: sans-serif !important;
    }
}

.form {
    margin-bottom: rem($gs-baseline * 2);
    position: relative;

    > .form__note {
        position: absolute;

        @include mq(desktop) {
            position: static;
            float: right;
            display: block;
            border-top: rem(1px) solid $c-neutral3;
            width: rem(gs-span(2) + $gs-gutter);
        }

        @include mq(mem-full) {
            width: rem(gs-span(3));
        }
    }

    .terms-info {
        @include fs-textSans(3);
    }
}

.form__signin {
    display: block;
    @include fs-bodyCopy(2);
    
    @include mq(desktop) {
        position: absolute;
        top: rem(9rem);
        left: rem(gs-span(2));
    }

    @include mq(mem-full) {
        left: rem(gs-span(2) + $gs-gutter);
    }
}

.form__section-heading {
    @include fs-headline(5);
    margin-right: 0;
    padding-bottom: rem($gs-gutter * 4);

    @include mq(desktop) {
        @include fs-headline(7);
        margin-left: rem(gs-span(2));
    }

    @include mq(mem-full) {
        margin-left: rem(gs-span(2) + $gs-gutter);
    }    
}

.form__heading {
    @include fs-header(3);
    margin-left: 0;
    margin-right: 0;
}

.form__note,
.form-field__note {
    @include fs-textSans(1);
    color: $c-neutral2;
    padding-top: rem($gs-baseline / 2);
    margin-bottom: rem(8px);
}

.fieldset {
    border: 0;
    border-top: rem(1px) solid $c-neutral3;
    display: table;
    padding: rem($gs-baseline / 2) rem($gs-gutter / 2);
    margin: 0;
    background-color: $c-neutral8; 

    @include mq(desktop) {
        width: rem(gs-span(8));
        margin-left: rem(gs-span(2));
    }

    @include mq(mem-full) {
        width: rem(gs-span(9));
        margin-left: rem(gs-span(2) + $gs-gutter);
    }
}

.fieldset--no-top-border {
    border-top: 0;
}

.fieldset--no-bg {
    background: transparent;
    padding-top: rem(5px);
}

.fieldset__heading {
    vertical-align: top;

    @include mq(tablet) {
        display: table-cell;
        padding-right: rem($gs-gutter * 2);
        width: rem(gs-span(4) + 40);
    }

    @include mq(desktop) {
        width: rem(gs-span(3));
    }

    @include mq(mem-full) {
        width: rem(gs-span(4));
    }
}

.fieldset__fields {
    vertical-align: top;
    padding-top: rem($gs-gutter);

    @include mq(tablet) {
        display: table-cell;
        width: rem(gs-span(5));
        padding-top: rem($gs-gutter + 15px);
    }

    @include mq(mem-full) {
        width: rem(gs-span(5) + $gs-gutter);
    }
}

.fieldset__fields--no-padding {
    padding-top: 0;
}

.form-fields-group .form-field {
    margin-bottom: 0;
}

.form-field {
    list-style: none;
    margin: 0 0 rem($gs-gutter);
    padding: 0;
}

.form-field__submit {
    .form-field__note {
        margin: 0 0 rem($gs-baseline * 2);
        @include mq(desktop) {
            float: right;
            width: 60%;
            margin: 0;
        }
    }
}

.form-field--no-margin {
    margin: 0;
}

.form-field--error {
    .label {
        color: $newsRed;
    }

    .text-input,
    .text-input:focus {
        border-color: $newsRed;
    }
}

.form-field__error-message {
    @include fs-data(3);
    color: $newsRed;
    margin-top: rem(2px);
}

// Allows for two up form field and label layout as in address form
.form-field__half {
    display: inline-block;
    width: 50%;
    padding-right: rem(12px);
    &:last-of-type {
        padding-right: 0;
        padding-left: rem(12px);
    }
}

.form__error {
    @include fs-data(4);
    background-color: #fdf4f3;
    border-bottom: rem(1px) solid lighten($newsRed, 35%);
    border-top: rem(1px) solid lighten($newsRed, 35%);
    color: $newsRed;
    margin-top: rem(6px);
    padding: rem(7px) rem(($gs-baseline / 3) * 2);

    @include mq(desktop) {
        display: block;
        position: absolute;
        top: rem($gs-gutter * 2);
        left: rem(gs-span(2));
        width: rem(gs-span(8));
    }

    @include mq(mem-full) {
        left: rem(gs-span(2) + $gs-gutter);
        width: rem(gs-span(9));
    }
}

.form__success {
    @include fs-data(4);
    background-color: lighten($environmentGreen, 70%);
    border-bottom: rem(1px) solid lighten($environmentGreen, 35%);
    border-top: rem(1px) solid lighten($environmentGreen, 35%);
    color: $environmentGreen;
    margin-top: rem($gs-baseline / 2);
    padding: rem(7px) rem(($gs-baseline / 3) * 2);
}

.form-field__error {
    color: $newsRed;
    margin-top: rem($gs-baseline / 2);
}

.form-field__note--below {
    margin-bottom: 0;
    margin-top: rem($gs-baseline / 2);
}

.form-field__note--left {
    float: left;
}

.form-field__note--right {
    float: right;
    margin-left: rem($gs-gutter);
}

.form-fields__inline {
    ul {
        margin: 0;
        padding: 0;

        .form-field {
            display: inline-block;
        }
    }

    .form-fields__heading {
        @include fs-bodyHeading(3, true);
        margin: 0 0 rem($gs-baseline);
        display: block;
    }
}

.form-fields--date-of-birth .form-field {
    margin: 0 rem(18px) 0 0;
}

.label {
    @include fs-bodyCopy(2);
    color: $c-neutral1;
    cursor: pointer;
    display: block;
    margin-bottom: rem(6px);
}

.label--inline {
    display: inline-block;
}

.text-input,
.textarea {
    border: rem(1px) solid $c-neutral4;
    @include box-shadow(none);
    @include box-sizing(border-box);
    color: $c-body;
    display: inline-block;
    font-family: $f-sans-serif-text;
    font-size: rem(16px);
    padding: rem(8px) rem(8px) rem(7px);
    line-height: 1.4;
    outline: none;
    @include border-radius(0);
    width: 100%;
    -webkit-appearance: none;

    &:focus {
        border-color: $mem-brandLightblue;
    }

    @include mq(tablet) {
        font-size: rem(14px);
    }
}

.text-input--small {
    width: 30%;
}

.text-input--block {
    display: block;
}

.textarea {
    resize: vertical;
}

.textarea--no-resize {
    min-height: rem(($gs-baseline / 3) * 20);
    resize: none;
}

.textarea--mid {
    min-height: rem($gs-baseline * 9);
}

.textarea--long {
    min-height: rem(($gs-baseline / 3) * 40);
}

.submit-input {
    background: $c-newsDefault;
    border: 0 none;
    color: $white;
    cursor: pointer;
    display: inline-block;
    font-size: rem(14px);
    margin: 0 rem($gs-gutter) 0 0;
    min-width: rem(gs-span(2));
    padding: rem(11px) rem($gutter / 2);
    outline: none;
    text-align: center;

    &:hover,
    &:focus {
        background: darken($c-newsDefault, 5%);
    }

    &:active {
        background: #000000;
    }
}

.submit-input[disabled] {
    &,
    &:hover,
    &:focus {
        background: $c-neutral5;
    }
}

[type=checkbox],
[type=radio] {
    float: left;
    height: rem(13px);
    margin-left: rem(-$gs-gutter);
    margin-top: rem(3px);
    width: rem(13px);
}

.inside-radio {
    float: left;
    margin-left: 0;
    margin-right: rem(6px);
}

.optional-marker {
    &:after {
        vertical-align: middle;
        content: '(optional)';
        color: $c-neutral2;
        @include fs-textSans(1);
        margin-left: rem(4px);
    }
}

.address-fieldset {
    overflow: hidden;
}

.password-strength-indicator {
    background-color: #ebebeb;
    height: rem(8px);
    margin-top: rem(4px);
    position: relative;

    /* Indicator bar */
    &:after {
        bottom: 0;
        content: '';
        display: block;
        left: 0;
        position: absolute;
        top: 0;
    }

    &.score-0:after { width: 20%; background-color: #cc0a00; }
    &.score-1:after { width: 40%; background-color: #ff4b00; }
    &.score-2:after { width: 60%; background-color: #ff8b00; }
    &.score-3:after { width: 80%; background-color: #00e643; }
    &.score-4:after { width: 100%; background-color: #00b334; }

    .password-strength {
        display: inline-block;
        height: rem(40px);
        margin-top: rem(14px);
    }
}

.cvc-cta {
    font-family: $f-sans-serif-text;
    font-size: rem(13px);
    line-height: rem(16px);
}


.cvc {
    font-family: $f-sans-serif-text;
    padding: rem($gs-baseline / 2) rem($gs-baseline / 2) rem($gs-baseline / 2) 0;
    font-size: rem(13px);
    line-height: rem(16px);
    .cvc__primary {
        float: left;
    }
    .cvc__secondary {
        margin-left: rem(70px);
    }
    .cvc__heading {
        font-weight: bold;
        font-family: $f-sans-serif-text;
        font-size: rem(13px);
        line-height: rem(16px);
    }
}

